# test-a-ble

./: .pre-commit-config.yaml  .readthedocs.yml  .safety-project.ini  CHANGELOG.md  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: github-release.yml  python-package.yml
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
examples/: __init__.py  run_nordic_example.py
examples/nordic_blinky/: README.md  __init__.py  config.py  verify_fixes.py
examples/nordic_blinky/tests/: test_blinky.py
scripts/: bump_version.py  release.py
test_a_ble/: __init__.py  ble_manager.py  cli.py  test_context.py  test_discovery.py  test_runner.py
tests/: test_ble_manager.py  test_cli.py  test_test_context.py  test_test_discovery.py  test_test_runner.py
tests/test_discovery_test_package/: __init__.py  import_timestamp.txt
